--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
   </div>
 </header>
 
+
+<!-- banner  -->
+ <!-- ================= Hero Section ================= -->
+  <section 
+    class="relative h-screen bg-cover bg-center flex items-center justify-center"
+    style="background-image: url('./Assets/banner-image.png');"
+  >
+    
+    <!-- Dark Overlay -->
+    <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+
+    <!-- Content -->
+    <div class="relative text-center text-white px-6">
+      <h1 class="text-4xl md:text-6xl font-bold mb-6">
+        Best Collection For You
+      </h1>
+
+      <p class="text-lg md:text-2xl mb-8">
+        Discover the latest fashion & exclusive deals
+      </p>
+
+      <button 
+        id="shopBtn"
+        class="bg-purple-600 hover:bg-purple-700 px-8 py-3 rounded-lg text-lg font-semibold transition duration-300"
+      >
+        Shop Now
+      </button>
+    </div>
+
+  </section>
+
+
 <!-- Cart Modal -->
 <div id="cart-modal" class="hidden fixed inset-0 bg-black/50 flex justify-center items-center z-50">
   <div class="bg-white p-6 rounded w-[90%] md:w-1/2 relative max-h-[80vh] overflow-y-auto">
