--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
 
 
 <!-- Cart Modal -->
-<!-- <div id="cart-modal" class="hidden fixed inset-0 bg-black/50 flex justify-center items-center z-50">
+<div id="cart-modal" class="hidden fixed inset-0 bg-black/50 flex justify-center items-center z-50">
   <div class="bg-white p-6 rounded w-[90%] md:w-1/2 relative max-h-[80vh] overflow-y-auto">
     <button id="close-cart" class="absolute top-3 right-4 text-xl font-bold">✖</button>
     <h2 class="text-xl font-bold mb-4">Your Cart</h2>
@@ -68,7 +68,7 @@
       Total: $<span id="cart-total">0</span>
     </div>
   </div>
-</div> -->
+</div>
 
 <!-- Main Section -->
 <section class="py-10 max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-6">
@@ -162,101 +162,15 @@
 <script src="./js/main.js"></script>
 
 <script>
-// ------------------- Extra JS for filter & search -------------------
-const priceFilter = document.getElementById("price-filter");
-const searchInput = document.getElementById("search-input");
-
-let allProducts = [];
-
-async function loadAllProducts() {
-  const res = await fetch("https://fakestoreapi.com/products");
-  const data = await res.json();
-  allProducts = data;
-  renderProducts(allProducts);
-}
-
-function renderProducts(products) {
-  const container = document.getElementById("products");
-  if (!container) return;
-
-  if (products.length === 0) {
-    container.innerHTML = "<p class='col-span-full text-center'>No products found.</p>";
-    return;
-  }
-
-  container.innerHTML = products.map(product => `
-    <div class="bg-white p-4 rounded shadow flex flex-col justify-between">
-      <img src="${product.image}" class="h-40 mx-auto object-contain mb-2">
-      <span class="text-xs bg-gray-200 px-2 py-1 rounded">${product.category}</span>
-      <h3 class="font-semibold mt-2">${product.title.substring(0,40)}...</h3>
-      <p class="text-yellow-500">⭐ ${product.rating.rate}</p>
-      <p class="text-purple-600 font-bold">$${product.price}</p>
-      <div class="flex gap-2 mt-2">
-        <button onclick='showDetails(${JSON.stringify(product)})'
-          class="bg-blue-600 text-white px-3 py-1 rounded flex-1">Details</button>
-        <button onclick='addToCart(${JSON.stringify(product)})'
-          class="bg-purple-600 text-white px-3 py-1 rounded flex-1">Add</button>
-      </div>
-    </div>
-  `).join("");
-}
-
-// Price Filter
-priceFilter.addEventListener("change", () => {
-  let filtered = [...allProducts];
-  if (priceFilter.value === "low") {
-    filtered.sort((a,b) => a.price - b.price);
-  } else if (priceFilter.value === "high") {
-    filtered.sort((a,b) => b.price - a.price);
-  }
-  // Also apply search filter
-  const search = searchInput.value.toLowerCase();
-  if (search) {
-    filtered = filtered.filter(p => p.title.toLowerCase().includes(search));
-  }
-  renderProducts(filtered);
-});
-
-// Search
-searchInput.addEventListener("input", () => {
-  let filtered = [...allProducts];
-  const search = searchInput.value.toLowerCase();
-  if (search) {
-    filtered = filtered.filter(p => p.title.toLowerCase().includes(search));
-  }
-  // Also apply price filter
-  if (priceFilter.value === "low") filtered.sort((a,b)=>a.price-b.price);
-  if (priceFilter.value === "high") filtered.sort((a,b)=>b.price-a.price);
-  renderProducts(filtered);
-});
-
-// Load categories
-async function loadCategories() {
-  const res = await fetch("https://fakestoreapi.com/products/categories");
-  const categories = await res.json();
-  const container = document.getElementById("categories");
-  container.innerHTML = categories.map(cat => `
-    <button onclick="filterByCategory('${cat}')"
-      class="bg-purple-600 text-white px-3 py-2 rounded">${cat}</button>
-  `).join("");
-}
-
-function filterByCategory(cat) {
-  let filtered = allProducts.filter(p => p.category === cat);
-  // Apply search
-  const search = searchInput.value.toLowerCase();
-  if (search) filtered = filtered.filter(p=>p.title.toLowerCase().includes(search));
-  // Apply price
-  if (priceFilter.value === "low") filtered.sort((a,b)=>a.price-b.price);
-  if (priceFilter.value === "high") filtered.sort((a,b)=>b.price-a.price);
-  renderProducts(filtered);
-}
-
-// Init
-document.addEventListener("DOMContentLoaded", () => {
-  loadAllProducts();
-  loadCategories();
-});
+  // শুধু পেজ লোড হওয়ার পর ডাটা কল করার অংশটুকু এখানে রাখুন
+  document.addEventListener("DOMContentLoaded", () => {
+    if (typeof loadAllProducts === 'function') {
+      loadAllProducts(); 
+    }
+    if (typeof loadCategories === 'function') {
+      loadCategories();
+    }
+  });
 </script>
 
 </body>
